2011-06-22  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/outitf.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/help/readhelp.c ,
 * src/misc/dstring.c ,
 * src/misc/hash.c :
   remove some useless casts

2011-06-22  Robert Larice
 * src/spicelib/devices/bsim4/b4geo.c ,
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/bsim4/b4temp.c :
   cleanup bsim4 prototypes

2011-06-22  Robert Larice
 * src/frontend/commands.c ,
 * src/frontend/misccoms.h ,
 * src/frontend/rawfile.c ,
 * src/frontend/vectors.c ,
 * src/frontend/plotting/pvec.c ,
 * src/include/fteext.h :
   cleanup some reoccuring function prototypes

2011-06-22  Robert Larice
 * src/spicelib/analysis/Makefile.am ,
 * src/spicelib/analysis/ckt.h ,
 * src/spicelib/analysis/cktdelt.c ,
 * visualc/vngspice.vcproj :
   remove ancient artifact "ckt.h"

2011-06-19  Dietmar Warning
 * Code merged into bsim4v4: Code diff's from formerly version 4v2 and 4v3 merged into
   4v4, selectable by "version=4.x.0" model parameter (x=2,3 ... 4)
 * Update to version 4.7.0: new code into bsim4 folder, Version 6 is now in
   new folder bsim4v6, OpenMP implemented, Update of tests/bsim4 to new version
 * res/resnoise.c, analysis/nevalsrc.c: Name changed NevalSrc2 to NevalSrcInstanceTemp and
   include new bsim4 function NevalSrc2

2011-06-18  Holger Vogt
 * measure.c: revert a change from Feb. 19th, 2011 to reinstate from=dfall
   inpcom.c, defines.h: allow / and \ in file paths under MS Windows
   inp.c: some comment added
   /examples/measure/simple-meas-tran.sp: another .measure example

2011-06-11  Holger Vogt
 * onemesh.c misc.c com_compose.c com_fft.c evaluate.c
   hpgl.c linear.c misccoms.c options.c points.c rawfile.c
   spec.c spiceif.c variable.c complete.c clip.c graf.c
   plot5.c plotit.c spbuild.c dctrcurv.c distoan.c
   noisean.c nbjttemp.c urcsetup.c ipc.c ipcstdio.c mifgetvalue.c
   postsc.c grid.c hash.c cktsens.c:
 remove compiler warnings by explicit casting double -> int etc.
